--- a/sway-dotfiles/requirements.txt
+++ b/sway-dotfiles/requirements.txt
@@ -4,4 +4,10 @@ kitty
 waybar
 rofi
 nerdfonts symbols
-fira font
+fira code font
+fish
+fisher  curl -sL https://raw.githubusercontent.com/jorgebucaran/fisher/main/functions/fisher.fish | source && fisher install jorgebucaran/fisher
+tide (fish prompt) fisher install IlanCosman/tide@v6
+Meslo Nerd Font Powerlevel10k
+blueman
+swaync
