--- a/sway-dotfiles/kitty/kitty.conf
+++ b/sway-dotfiles/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
+include mocha.conf
+
 #: Fonts {{{
 
 #: kitty has very powerful font management. You can configure
@@ -21,6 +23,13 @@
 #: syntax>.
 
 font_size 11.0
+# background_opacity 0.6
+
+tab_bar_min_tabs            1
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 
 #: Font size (in pts).  11.0 default
 
@@ -1178,7 +1187,6 @@ font_size 11.0
 
 #: The foreground and background colors.
 
-background_opacity 0.6
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
