--- a/sway-dotfiles/kitty/_kitty.conf
+++ b/sway-dotfiles/kitty/_kitty.conf
@@ -20,9 +20,9 @@
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-# font_size 11.0
+font_size 11.0
 
-#: Font size (in pts).
+#: Font size (in pts).  11.0 default
 
 # force_ltr no
 
@@ -1178,7 +1178,7 @@
 
 #: The foreground and background colors.
 
-background_opacity 0.2
+background_opacity 0.6
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
