--- a/sway-dotfiles/waybar/config
+++ b/sway-dotfiles/waybar/config
@@ -1,14 +1,13 @@
 {
   "layer": "top",
-  "position": "top",
     "modules-left": ["custom/swaymenu", "custom/console", "sway/workspaces"],
     "modules-center": ["clock"],
-    "modules-right": ["tray", "backlight", "pulseaudio", "bluetooth", "network", "battery", "custom/endeavouros"],
+    "modules-right": ["tray", "backlight", "pulseaudio", "bluetooth", "network", "battery", "custom/fedora"],
     "margin-top": 5,
     "margin-left": 5,
     "margin-right": 5,
-    "custom/endeavouros": {
-      "format": "  ",
+    "custom/fedora": {
+      "format": "  ",
       "tooltip": false,
       "on-click": "sh $HOME/.config/rofi/bin/powermenu"
     },
@@ -48,7 +47,7 @@
     },
     "pulseaudio": {
       "format": "<span color='#b4befe'>{icon}</span> {volume}%",
-      "format-muted": "<span color='#b4befe'></span>",
+      "format-muted": "",
       "tooltip": false,
       "format-icons": {
         "headphone": "",
@@ -66,7 +65,7 @@
       "on-click": "blueman-manager",
     },
     "network": {
-      "interface": "wlan0",
+      "interface": "wlp0s20f3",
       "format": "{ifname}",
       "format-wifi": "<span color='#b4befe'> </span>{essid}",
       "format-ethernet": "{ipaddr}/{cidr} ",
