--- a/sway-dotfiles/sway/config
+++ b/sway-dotfiles/sway/config
@@ -36,6 +36,8 @@ output * bg /home/owen/Images/RW_survivor_wp.jpg fill
 # Example configuration:
 #
 output eDP-1 resolution 1920x1080 position 0,0
+output HDMI-A-1 resolution 1920x1080 position 1920,0
+
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -52,6 +54,7 @@ output eDP-1 resolution 1920x1080 position 0,0
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 for_window [app_id=".*"] inhibit_idle fullscreen
+for_window [app_id="(.|\s)*\S(.|\s)*"] title_format "<i>%app_id</i> ---- <b>%title</b>"
 
 ### Input configuration
 #
